--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ h3:hover {
   box-shadow: 0 2px 10px rgba(255, 255, 255, 1);
 }
 
+.hidden img {
+  filter: grayscale(100%) brightness(0);
+}
+
 /* Basic body styling */
 
 body {
