--- a/style.css
+++ b/style.css
@@ -69,6 +69,14 @@
    border: 2px solid #ddd;
 }
 
+#header {
+  height: 400px;
+  margin: auto;
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 32px;
+  border: 2px solid #ddd;
+}
+
 a {
   color: #008eac;
 }
