--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ h3 {
 h3:hover {
   text-decoration: none;
   text-align: center;
-  color: blue;
+  color: #008eac;
   margin: 5px;
   padding: 5px;
   width: 50%;
@@ -158,17 +158,6 @@ body {
   gap: 20px;
 }
 
-@keyframes cardAnimation {
-  0% {box-shadow: 0 2px 10px rgba(255, 255, 255, 0.2);}
-  50% {box-shadow: 0 2px 10px rgba(255, 255, 255, 0.8);}
-  100% {box-shadow: 0 2px 10px rgba(255, 255, 255, 0.2);}
-}
-
-@keyframes cardAnimation {
-  0% {padding: 15px;}
-  100% {padding: 20px;}
-}
-
 /* Each card */
 .card {
   position: relative;
@@ -178,12 +167,12 @@ body {
   padding: 15px;
   width: 250px;
   box-shadow: 0 2px 10px rgba(255, 255, 255, 0.2);
-  transition: padding 1s;
+  transition: color 0.5s;
 }
 
 .popup {
   position: absolute;
-  bottom: 90%;
+  bottom: 40%;
   left: 50%;
   transform: translateX(-50%) translateY(10px);
   background: rgba(0, 0, 0, 0.9);
@@ -199,10 +188,10 @@ body {
 
 
 .card:hover {
+  color: #008eac;
   background-color: #fff;
   border: 2px solid #ddd;
   border-radius: 8px;
-  padding: 20px;
   width: 250px;
 }
 
