--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@
 }
 
 #header {
-  height: 400px;
+  height: 40vh;
   margin: auto;
   background-color: rgba(255, 255, 255, 1);
   border-radius: 32px;
