--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ h3 {
   box-shadow: 0 2px 10px rgba(255, 255, 255, 0.5);
 }
 
-h3:hover {
+h3:hover #masterlist {
   text-decoration: none;
   text-align: center;
   color: #008eac;
@@ -151,6 +151,98 @@ body {
   background-position: center;
 }
 
+@media (max-width: 1000px) {
+
+  #trait {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+
+  #trait .card {
+    display: flex;
+    align-items: flex-start;
+    width: 80vw;
+    gap: 30px;
+    height: auto;
+    margin: auto;
+  }
+
+  #trait .card img {
+    width: 15vw;
+    height: auto;
+    flex-shrink: 0;
+    border-radius: 8px;
+  }
+
+  #trait .card .text-selection {
+    flex: 1;
+    justify-content: center;
+  }
+
+  #trait .card h2, #trait .card h3, #trait .card p {
+    text-align: left;
+    margin: 5px 0;
+  }
+
+}
+
+@media (min-width: 1001px) {
+
+#trait {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+#trait .card {
+  display: flex;
+  align-items: flex-start;
+  width: 80vw;
+  gap: 30px;
+  height: 10vw;
+  margin: auto;
+}
+
+#trait .card img {
+  width: auto;
+  height: 10vw;
+  flex-shrink: 0;
+  border-radius: 8px;
+}
+
+#trait .card .text-selection {
+  flex: 1;
+  justify-content: center;
+}
+
+#trait .card h2, #trait .card h3, #trait .card p {
+  width: 30vw;
+  text-align: left;
+  margin: 5px 0;
+}
+}
+
+.Common {
+  background-color: #78b159;
+}
+
+.Uncommon {
+  background-color: #55acee;
+}
+
+.Rare {
+  background-color: #aa8ed6;
+}
+
+.Secret {
+  background-color: #dd2e44;
+}
+
+.Exclusive {
+  background-color: #31373d;
+}
+
 /* Masterlist container */
 #masterlist {
   display: flex;
@@ -167,6 +259,9 @@ body {
   padding: 15px;
   width: 250px;
   box-shadow: 0 2px 10px rgba(255, 255, 255, 0.2);
+}
+
+.card #masterlist {
   transition: color 0.5s;
 }
 
@@ -188,11 +283,14 @@ body {
 
 
 .card:hover {
-  color: #008eac;
   background-color: #fff;
   border: 2px solid #ddd;
   border-radius: 8px;
   width: 250px;
+}
+
+.card:hover #masterlist {
+  color: #008eac;
 }
 
 .card:hover .popup {
