--- a/style.css
+++ b/style.css
@@ -72,9 +72,94 @@
 #header {
   height: 40vh;
   margin: auto;
-  background-color: rgba(255, 255, 255, 1);
+  object-fit: cover;
+}
+
+#sideheader {
+  height: 20vh;
+  margin: auto;
   border-radius: 32px;
   border: 2px solid #ddd;
+}
+
+#headerstack {
+  position: relative;
+  height: 40vh;
+  width: 50vh;
+  margin: auto;
+  overflow: hidden;
+  border-radius: 32px;
+  background: radial-gradient(#dadada, #f4f4f4);
+  border: 2px solid #ddd;
+  
+}
+
+#sidestack {
+  position: relative;
+  height: 20vh;
+  width: 60vh;
+  margin: auto;
+  overflow: hidden;
+  z-index: 1;
+  border-radius: 32px;
+  border: 2px solid #ddd;
+  background: radial-gradient(#dadada, #f4f4f4);
+  
+}
+
+#headerstack img {
+  position: relative;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  height: 40vh;
+  object-fit: cover;
+}
+
+#sidestack img {
+  position: relative;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  height: 20vh;
+  object-fit: cover;
+}
+
+#dotcontainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-image: url("talldots.png");
+  background-repeat: repeat;
+  background-size: 450px 300px;
+  filter: grayscale(100%) brightness(10) opacity(0.2);
+  animation: scrollDiagonal 15s linear infinite;
+}
+
+#sidedotcontainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-image: url("shortdots.png");
+  background-repeat: repeat;
+  background-size: 450px 150px;
+  filter: grayscale(100%) brightness(10) opacity(0.2);
+  animation: scrollDiagonal 15s linear infinite;
+}
+
+@keyframes scrollDiagonal {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 200px 200px;
+  }
 }
 
 a {
@@ -162,7 +247,7 @@ body {
   #trait .card {
     display: flex;
     align-items: flex-start;
-    width: 80vw;
+    width: 90vw;
     gap: 30px;
     height: auto;
     margin: auto;
@@ -243,14 +328,12 @@ body {
   background-color: #31373d;
 }
 
-/* Masterlist container */
 #masterlist {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
 }
 
-/* Each card */
 .card {
   position: relative;
   background-color: #fff;
@@ -299,29 +382,25 @@ body {
   transform: translateX(-50%) translateY(0);
 }
 
-/* Card title */
 .card h2 {
   font-size: 1.2em;
   margin-bottom: 10px;
   text-align: center;
 }
 
-/* Images inside cards */
 .card img {
   width: 100%;
-  height: auto; /* Keeps aspect ratio */
+  height: auto; 
   display: block;
   margin-bottom: 10px;
   border-radius: 4px;
 }
 
-/* Paragraphs inside cards */
 .card p {
   font-size: 0.95em;
   margin: 5px 0;
 }
 
-/* Links inside card */
 .card a {
   color: #008eac;
   text-decoration: none;
