--- a/style.css
+++ b/style.css
@@ -69,6 +69,15 @@
    border: 2px solid #ddd;
 }
 
+#guide {
+  background-color: #f4f4f4;
+  border: 2px solid #ddd;
+  border-radius: 16px;
+  width: 90vh;
+  margin: auto;
+  padding: 5vh;
+}
+
 #header {
   height: 40vh;
   margin: auto;
@@ -107,6 +116,19 @@
   
 }
 
+#guidestack {
+  position: relative;
+  height: 50vh;
+  width: 65vh;
+  margin: auto;
+  overflow: hidden;
+  z-index: 1;
+  border-radius: 32px;
+  border: 2px solid #ddd;
+  background: radial-gradient(#dadada, #f4f4f4); 
+}
+
+
 #headerstack img {
   position: relative;
   z-index: 2;
@@ -122,6 +144,16 @@
   top: 0;
   left: 0;
   height: 20vh;
+  object-fit: cover;
+}
+
+#guidestack img {
+  position: relative;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  height: 50vh;
+  width: auto;
   object-fit: cover;
 }
 
