--- a/style.css
+++ b/style.css
@@ -276,43 +276,45 @@ body {
   background-position: center;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 900px) {
 
   #trait {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
+    justify-content: center;
   }
 
   #trait .card {
     display: flex;
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
     width: 90vw;
     gap: 30px;
     height: auto;
     margin: auto;
+    text-align: center;
   }
 
   #trait .card img {
-    width: 15vw;
-    height: auto;
+    width: auto;
+    height: 30vh;
     flex-shrink: 0;
     border-radius: 8px;
   }
 
   #trait .card .text-selection {
-    flex: 1;
     justify-content: center;
   }
 
   #trait .card h2, #trait .card h3, #trait .card p {
-    text-align: left;
-    margin: 5px 0;
+    text-align: center;
   }
 
 }
 
-@media (min-width: 1001px) {
+@media (min-width: 901px) {
 
 #trait {
   display: flex;
@@ -323,9 +325,9 @@ body {
 #trait .card {
   display: flex;
   align-items: flex-start;
-  width: 80vw;
+  width: 90vw;
   gap: 30px;
-  height: 10vw;
+  height: auto;
   margin: auto;
 }
 
@@ -341,8 +343,13 @@ body {
   justify-content: center;
 }
 
-#trait .card h2, #trait .card h3, #trait .card p {
-  width: 30vw;
+#trait .card h2, #trait .card h3 {
+  width: 20vw;
+  text-align: left;
+  margin: 5px 0;
+}
+
+#trait .card p {
   text-align: left;
   margin: 5px 0;
 }
