--- a/style.css
+++ b/style.css
@@ -312,6 +312,45 @@ body {
     text-align: center;
   }
 
+  #header {
+    height: 20vh;
+  }
+
+  #sideheader {
+    height: 10vh;
+  }
+
+  #guide {
+    width: 50vh;
+    height: auto;
+  }
+
+  #dotcontainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-image: url("talldots.png");
+  background-repeat: repeat;
+  background-size: 450px 300px;
+  filter: grayscale(100%) brightness(10) opacity(0.2);
+}
+
+#sidedotcontainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-image: url("shortdots.png");
+  background-repeat: repeat;
+  background-size: 450px 150px;
+  filter: grayscale(100%) brightness(10) opacity(0.2);
+}
+
 }
 
 @media (min-width: 801px) {
